<resources>
    <string name="app_name">SmartSpent</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="already_signed">Already have an account? Sign in.</string>
    <string name="action_signup">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_fullname">Full name</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_success">Successfully registered!</string>
    <string name="register_unsuccess">Could not register.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_transactions">TransactionsActivity</string>
    <string name="title_activity_transaction_details">TransactionDetailsActivity</string>
    <string name="timer">Timer</string>
    <string name="transactions">Transactions</string>
    <string name="map">Map</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="basic_info">Basic info</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick time</string>
    <string name="euro_symbol">€</string>
    <string name="point_symbol">.</string>
    <string name="amount">Amount</string>
    <string name="roboto_light">RobotoLight</string>
    <string name="other">Other</string>
    <string name="scan_bill">Scan bill</string>
    <string name="first">first</string>
    <string name="last">last</string>
    <string name="title_activity_new_transaction_tabs">NewTransactionTabsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="view_items">View items</string>
    <string name="scan_bill_first">Scan bill first</string>
    <string name="stats">Statistics</string>
    <string name="bill">Bill</string>
    <string name="transaction">Transaction</string>
    <string name="things_you_like">Things you like</string>
    <string name="most_visited_places">Most visited places</string>
    <string name="heatmap">Heat map</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="scan_card">Scan card</string>
    <string name="budgets">Budgets</string>
    <string name="new_transaction">New transaction</string>
    <string name="stock_market">Stock market</string>
    <string name="news">News</string>
    <string name="title_activity_stock_market">StockMarketActivity</string>
    <string name="income">Income</string>
    <string name="scan_nfc">Turn on your NFC module and put your Debit or Credit card on the back of your phone device to scan for the last transactions</string>
    <string name="string_app_description">SmartSpent is an Android application built by two Computer Science students from Maribor, Slovenia.
        The Purpose of the application is to allow the user to insert and track the transactions he makes throughout an extended period of time,
        the user can then access various statistics about his/her spending habits.
        The application allows for use of a planned user Budget and it incorporates a points system so that the user,
        can get a sense of achievement about sticking to a certain budget/spending habit, so that he/she can appropriately plan/follow a finance plan.
        The application also uses a basic genetic algorithm to be able to foresee what the users, spending might look like next month,
        this unfortunately does not include unforeseen major spikes such as car repairs, health complications, ...</string>
    <string name="string_app_cr">Application uses various open-source libraries (under GPL/Apache2 Licence), credit and rights go to all respective owners of these libraries.</string>
    <string name="string_app_link_zoran">https://github.com/zaltiparmakov</string>
    <string name="string_app_link_uros">https://github.com/markovicu97</string>
</resources>
