<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group
        android:id="@+id/nav_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_transactions"
            android:title="@string/transactions" />
        <item
            android:id="@+id/nav_budgets"
            android:icon="@drawable/ic_budgets"
            android:title="@string/budgets" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_chart"
            android:title="@string/stats" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/heatmap" />
        <item
            android:id="@+id/nav_cardscan"
            android:icon="@drawable/ic_nfc"
            android:title="@string/scan_card" />
    </group>

    <group
        android:id="@+id/nav_group_stock"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_stock_market"
            android:icon="@drawable/ic_stocks"
            android:title="@string/stock_market" />
    </group>

    <group
        android:id="@+id/nav_group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>
</menu>
