<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

        <RelativeLayout
            android:id="@+id/about_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="97sp"
                    android:layout_height="104sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="114sp"
                    android:layout_marginTop="57sp"
                    android:tint="@color/common_google_signin_btn_text_dark_focused"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="337sp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="188sp"
                    android:layout_marginEnd="0sp"
                    android:fontFamily="@font/steinerlight"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <!-- Login progress -->

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="147dp"
                    android:layout_above="@+id/textView5"
                    android:layout_below="@+id/textView"
                    android:text="@string/string_app_description"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/TextLine"
                    android:layout_alignStart="@+id/TextLine"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/string_app_cr" />

                <EditText
                    android:id="@+id/TextLine"
                    android:layout_width="327dp"
                    android:layout_height="117dp"
                    android:layout_alignStart="@+id/textView"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="-1dp"
                    android:layout_marginBottom="0dp"
                    android:ems="10"
                    android:text="Made by:" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/TextLine"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="109dp"
                    android:layout_marginTop="-63dp"
                    android:layout_marginBottom="47dp"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:text="@string/string_app_link_zoran" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TextLine"
                    android:layout_alignStart="@+id/textView10"
                    android:layout_alignBottom="@+id/TextLine"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="-37dp"
                    android:layout_marginBottom="21dp"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:text="@string/string_app_link_uros" />

        </RelativeLayout>
</LinearLayout>